# controller/driver_controller.go
@@ -1,6 +1,8 @@
 package controller
 
 import (
+	"net/http"
+
 	"github.com/gin-gonic/gin"
 	"github.com/mxngocqb/IoT-Project/model"
 	"github.com/mxngocqb/IoT-Project/service/driver"
@@ -15,8 +17,14 @@ func NewDriverController(driverService driver.DriverService) *DriverController {
 	return &DriverController{driverService: driverService}
 }
 
+type DriverServerResponse struct {
+	Code   int         `json:"code"`
+	Status string      `json:"status"`
+	Data   interface{} `json:"data"`
+}
+
 // Createdriver
-// @Tags driver
+// @Tags Driver
 // @Summary Create a new driver
 // @Description Create a new driver
 // @Accept json
@@ -41,12 +49,109 @@ func (c *DriverController) CreateDriver(ctx *gin.Context) {
 	}
 
 	serverReponse := gin.H{
-		"code": 200,
+		"code":   200,
 		"status": "Created",
-		"data": driver,
+		"data":   driver,
 	}
 
 	ctx.Header("Content-Type", "application/json")
 	ctx.JSON(200, serverReponse)
+}
 
+// ReadAllDriver retrieves all drivers from the database.
+// @Summary Get all drivers
+// @Description Get all drivers from the database and returns them as JSON.
+// @Tags Driver
+// @Accept json
+// @Produce json
+// @Success 200 {object} DriverServerResponse "List of drivers"
+// @Failure 500 {object} DriverServerResponse "Internal Server Error"
+// @Router /drivers [get]
+func (c *DriverController) ReadAllDriver(ctx *gin.Context) {
+	log.Info().Msg("Reading All Driver")
+	drivers, err := c.driverService.ReadAll()
+
+	if err != nil {
+		ctx.JSON(500, gin.H{"error": err.Error()})
+	}
+
+	serverResponse := DriverServerResponse{
+		Code:   http.StatusOK,
+		Status: "OK",
+		Data:   drivers,
+	}
+
+	ctx.Header("Content-Type", "application/json")
+	ctx.JSON(200, serverResponse)
+}
+
+// ReadDriverByID retrieves a driver by its ID.
+// @Summary Retrieve a driver by ID
+// @Description Retrieve a driver from the database by its ID and return it as JSON.
+// @Tags Driver
+// @Accept json
+// @Produce json
+// @Param driverID path string true "Driver ID"
+// @Success 200 {object} DriverServerResponse "Driver information"
+// @Failure 400 {object} DriverServerResponse "Bad Request"
+// @Failure 404 {object} DriverServerResponse "Not Found"
+// @Failure 500 {object} DriverServerResponse "Internal Server Error"
+// @Router /drivers/{driverID} [get]
+func (c *DriverController) ReadDriverByID(ctx *gin.Context) {
+	log.Info().Msg("Reading Category By ID")
+	driverID := ctx.Param("driverID")
+	driver, err := c.driverService.ReadByID(driverID)
+	if err != nil {
+		ctx.JSON(500, DriverServerResponse{Code: http.StatusInternalServerError, Status: "Internal Server Error", Data: err.Error()})
+		return
+	}
+	serverResponse := DriverServerResponse{
+		Code:   http.StatusOK,
+		Status: "OK",
+		Data:   driver,
+	}
+	ctx.Header("Content-Type", "application/json")
+	ctx.JSON(200, serverResponse)
+}
+
+// UpdateDriver updates a driver.
+// @Summary Update a driver
+// @Description Update information of a driver based on the provided data in JSON format.
+// @Tags Driver
+// @Accept json
+// @Produce json
+// @Param driverID path string true "Driver ID"
+// @Param driver body model.Driver true "Driver object to be updated"
+// @Success 200 {object} DriverServerResponse "Updated driver information"
+// @Failure 400 {object} DriverServerResponse "Bad Request"
+// @Failure 500 {object} DriverServerResponse "Internal Server Error"
+// @Router /drivers/{driverID}  [put]
+func (c *DriverController) UpdateDriver(ctx *gin.Context) {
+	log.Info().Msg("Updating Driver")
+	updateDriver := model.Driver{}
+	err := ctx.ShouldBindJSON(&updateDriver)
+	if err != nil {
+		ctx.JSON(400, DriverServerResponse{
+			Code:   http.StatusBadRequest,
+			Status: "Bad Request",
+			Data:   "Nothing",
+		})
+		return
+	}
+	driver, er := c.driverService.Update(&updateDriver)
+	if er != nil {
+		ctx.JSON(500, DriverServerResponse{
+			Code:   http.StatusInternalServerError,
+			Status: "Internal Server Erro",
+			Data:   "Nothing",
+		})
+		return
+	}
+	serverResponse := DriverServerResponse{
+		Code:   http.StatusOK,
+		Status: "OK",
+		Data:   driver,
+	}
+	ctx.Header("Content-Type", "application/json")
+	ctx.JSON(200, serverResponse)
 }
